src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  overflow: hidden;
}

input[type=checkbox] {
  -webkit-appearance: none; /* remove default appearance on Webkit-based browsers */
  -moz-appearance: none; /* remove default appearance on Mozilla-based browsers */
  appearance: none; /* remove default appearance on all other browsers */
}

input[type="checkbox"]:checked + label {

  background-color: rgb(109, 99, 248);
  color: #fff;
  transition: all .2s;
}

input[type="checkbox"] + label {

  transition: all .2s;
}

